[package]
name = "gamefox"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.3"
lazy_static = "1.4"

[dependencies.sdl2]
version = "0.32"
default-features = false
features = ["image"]
